# Sola

./: .gitignore  Cambridge-abstract.md  fixbb.sh
Dinamicni/: Naloga1.tex  grafi.gpl
Dinamicni/Vrtavka/: CMakeLists.txt  main.cpp  odvod.cl
Dinamicni/Zakljucna/: Data.tar.bz2  grafi.gpl  vrtavka.tex
Dinamicni/strobo/: CMakeLists.txt  main.cpp
Fotonika/: naloga.tex
ICAMP/: grafi.gnuplot  radial-cross.eps  refraction.eps  refraction.tex  talk.tex
ICAMP/Povray/: intensity_gauss.pov
Magisterij/: StyleCent.sty  build.sh  grafi.gnuplot  magisterij.bib  magisterij.tex  midem.tex  midem_abstract.tex  refraction_t.xcf  test_uniform_nocite.tex  zagovor.tex  zumer.bst
Magisterij/Defekti/: defects.py
Magisterij/Rezultati/: rezultati.hx  slike.txt  slow.hx
Magisterij/Slike/: Yee-cube.eps  bandgap.pdf_tex  director-profile-cylinder-kleman.eps  director-profile-radial.eps  double-twist-cylinder-coles-morris.eps  escaped-director-energy.eps  periodic-structure-p.pdf_tex  periodic-structure.pdf_tex  pml.pdf_tex
Maja/: Klotrimazol.odt  krogi.py
Mehka/: derjaguin.tex
Modelska Analiza/101/: 101.kilepr  Grafi.gpi  Miha_Cancula_101.tex
Modelska Analiza/102/: 102.kilepr  funkcije.m  grafi.gpl  grafi_lin.gpi  grafi_semafor.gpl  linear.m  loop.gpl  miha_cancula_102.tex  naboji.m
Modelska Analiza/103/: 103.kilepr  enacbe.m  grafi.gpl  miha_cancula_103.tex  rk4.m
Modelska Analiza/104/: miha_cancula_104.kilepr  miha_cancula_104.tex
Modelska Analiza/105/: enacbe.m  grafi.gpl  miha_cancula_105.kilepr  miha_cancula_105.tex
Modelska Analiza/106/: grafi.gpl  miha_cancula_106.tex  prevodnost.m  varcnimodeli.kilepr
Modelska Analiza/107/: Makefile  common.h  gauss.h  miha_cancula_107.tex  rng.c  slucajnastevila.kilepr  smer.h
Modelska Analiza/108/: miha_cancula_108.tex  montecarlo.kilepr
Modelska Analiza/110/: grafi.gpl  matrike.gpl  miha_cancula_110.tex  skript.sh
Modelska Analiza/111/: TOP500_201111.csv  TOP500_201111.ods  grafi.py  hitrost.py  miha_cancula_111.tex  modeli.gpl  sirjenje.py  svet.gpl  svet.py  svet.sh
Modelska Analiza/112/: decon.m  grafi.gpl  konvolucija.m  miha_cancula_112.tex  octave-core  okna.m
Modelska Analiza/202/Integrator/: CMakeLists.txt  main.cpp
Modelska Analiza/202/Integrator/lib/: CMakeLists.txt  integrator.cpp  integrator.h
Modelska Analiza/202/Integrator/tests/: CMakeLists.txt  integratortest.cpp  integratortest.h
Modelska Analiza/208/fem/: CMakeLists.txt  delitev.cpp  delitev.h  delitev_arpack.cpp  delitev_graf.cpp  delitev_lastne.cpp  galerkin.cpp  galerkin.h  main.cpp
Modelska Analiza/Zakljucna/Planetki/: CMakeLists.txt  main.cpp  planets.cpp  planets.h  toolbox.cpp
Nagrada/: Dokazila.doc  Dokazila.odt
Poster/: cev.blend  cev.blend1  grafi.gnuplot  intensity_gauss.xcf  poster.tex  radial.py  refraction.tex  render.xcf  temp.eps
Razno/: kde-uvod.tex
Seminar/: Placljivi  energyharvesting.kilepr  harvesting.aux  harvesting.bib  harvesting.tex  predstavitev.tex  zumer.bst
Simetrije/: young.tex
Stabilnost/: abstract.txt  nestabilnost.tex  predstavitev.tex
Statisticna/: grafi.gpl  naloga.tex  porocilo.tex  pricakovana.awk  runall.sh
Visje Racunske Metode/04_Metropolis/metropolis/: CMakeLists.txt  main.cpp  oscilator.cpp  oscilator.h
(+151 files in other folders)
